--- a/.pages.yml
+++ b/.pages.yml
@@ -36,3 +36,8 @@ content:
         label: Preview image
         type: image
         description: Image used in the social preview on social networks (e.g. Facebook, Twitter...)
+      - name: listImages
+        label: images gallery
+        list: true
+        type: image
+        description: list of images
