--- a/.pages.yml
+++ b/.pages.yml
@@ -27,7 +27,7 @@ content:
   - name: about
     label: About page
     type: file
-    path: src/pages/test.ymal
+    path: src/test.jon
     fields:
       - { name: layout, type: string, hidden: true, default: "../layouts/AboutLayout.astro" }
       - { name: title, label: Title, type: string }
