--- a/.pages.yml
+++ b/.pages.yml
@@ -46,3 +46,19 @@ content:
         list: true
         type: string
         description: this is a list of string
+      - name: contact
+        label: Contact information
+        type: object
+        fields:
+        - name: first_name
+          label: First name
+          type: string
+        - name: last_name
+          label: Last name
+          type: string
+        - name: email
+          label: Email address
+          type: string
+        - name: phone
+          label: Phone number
+          type: string
