Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -49,6 +49,7 @@ content:
       - name: contact
         label: Contact information
         type: object
+        list: true
         fields:
         - name: first_name
           label: First name
